Added functionality to highlight

--- a/css/style.css
+++ b/css/style.css
@@ -28,25 +28,51 @@ h6 {
     margin-bottom: 4px;
 }
 
+.overlay {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: grayscale(80%) blur(8px);
+    width: var(--content-max-width);
+    min-width: 100vw;
+    height: 100%;
+    z-index: 10;
+}
+
+.hidden {
+    display: none;
+}
+
+.shown {
+    display: block;
+}
+
 .item-detail-name {
     font-family: 'Fragment Mono', 'Courier New', Courier, monospace;
 }
 
-.floating-header {
-    width: var(--content-max-width);
-    max-width: 100vw;
+header {
     position: fixed;
     left: 50%;
     transform: translate(-50%, 0);
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
     background-color: rgba(0, 0, 0, 0.5);
-    backdrop-filter: grayscale(100%) blur(8px);
+    backdrop-filter: grayscale(80%) blur(8px);
     padding: 8px 16px;
     z-index: 1;
 
     * {
         color: white;
     }
+}
+
+.floating-header {
+    width: var(--content-max-width);
+    max-width: 100vw;
+
 }
 
 .standard-header {
@@ -70,7 +96,7 @@ h6 {
 .menu-closed {
     height: 0px;
     padding: 0px 8px;
-    overflow: clip;
+    /* overflow: clip; */
     opacity: 0;
     -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
@@ -120,7 +146,7 @@ input[type="search"] {
     padding: 80px var(--grid-gap);
     display: grid;
     gap: var(--grid-gap);
-    grid-template-columns: repeat( auto-fit, minmax(256px, 1fr) );
+    grid-template-columns: repeat(auto-fit, minmax(256px, 1fr));
 }
 
 
@@ -192,8 +218,8 @@ input[type="search"] {
     }
 }
 
-#filter-items-container .item-detail-value::after{
-        background-color: white;
+#filter-items-container .item-detail-value::after {
+    background-color: white;
 }
 
 
@@ -230,10 +256,11 @@ input[type="search"] {
         --content-max-width: 800px;
         --grid-gap: 8px;
     }
+
     .content-container {
-        grid-template-columns: repeat( auto-fit, minmax(168px, 1fr) );
+        grid-template-columns: repeat(auto-fit, minmax(168px, 1fr));
     }
-    
+
 
     h3 {
         font-size: 14px;
